fix: Button Hover on Mobile on Articles Filter

--- a/assets/scss/parts/components/prismic/_articles.scss
+++ b/assets/scss/parts/components/prismic/_articles.scss
@@ -50,6 +50,10 @@
 
         &:hover {
           opacity: $default-opacity;
+
+          @include for-tablet {
+            opacity: 1;
+          }
         }
       }
       .active {
